Refactoring Utils Fix: - return empty list - remove doubled Path - write to file empty problem